font not visible on mobile fixed

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -291,6 +291,7 @@
       html,
       body {
         overflow-x: hidden;
+        font-family: var(--font-mono);
       }
     }
 
